syntax = "proto3";

package calculator;

service Operations {
  rpc Sum (Operands) returns (OperationResult) {}
  rpc Diff (Operands) returns (OperationResult) {}
  rpc Mult (Operands) returns (OperationResult) {}
  rpc Div (Operands) returns (OperationResult) {}
}

message Operands {
  float param1 = 1;
  float param2 = 2;
}

message OperationResult {
  float result = 1;
}

